[package]
name = "typst-2-rsx"
license = "MIT OR Apache-2.0"
version = "0.1.0"
description = "Convert Typst documents into RSX elements for use in Rust UI development."
edition = "2021"

[dependencies]
dioxus = "0.6.2"
serde ={ version = "1.0.217", features = ["derive"]}
serde-xml-rs = "0.6.0"

[dev-dependencies]
serde_json = "1.0"

